[GLT-3508] change library indices to individual fields